se minifico el index

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Portafolio Roger Urbano</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
 
-	<link rel="stylesheet" href="css/fakeLoader.min.css">  <!-- preloader -->
+	<link rel="stylesheet" href="css/fakeLoader.min.css">  
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500|Roboto:300,400,500,700" rel="stylesheet">
@@ -14,18 +14,18 @@
 
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="css/progressbar.min.css">
-	<Link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
 
-</head>
+</link></head>
 
 <body>
 <div id="fakeloader"></div>
-<!--========== BARRA DE NAVEGACION ==========-->
+
 	<nav>
 		<div class="navs-wrapp" id="navs-wrapp">
 			<div class="container">
 				<ul class="navs">
-					<li><a href="javascript:void(0);" class="link " id="link-sobremi">Sobre mi<span class="raya"></span></a></li>
+					<li><a href="javascript:void(0);" class="link" id="link-sobremi">Sobre mi<span class="raya"></span></a></li>
 					<li><a href="javascript:void(0);" class="link" id="link-habilidad">Habilidades<span class="raya"></span></a></li>
 					<li><a href="javascript:void(0);" class="link" id="link-portafolio">Portafolio<span class="raya"></span></a></li>
 					<li><a href="javascript:void(0);" class="link" id="link-contacto">Contacto<span class="raya"></span></a></li>
@@ -44,7 +44,7 @@
 	</header>
 
 
-<!--========== SOBRE MI ==========-->
+
 	<section>
 		<div class="container sobremi-wrapper" id="sobremi-wrapper">
 				<div class="row sobremi-wrapp col-md-12">
@@ -112,11 +112,11 @@
 					</div>
 				</div>
 			</div>
-		</div>	<!-- fin .container sobremi -->
+		</div>	
 	</section>
 
 
-<!--========== HABILIDAD ==========-->
+
 		<section>
 			<div class="container-fluid habilidad-wrapper" id="habilidad-wrapper">
 				<div class="container">
@@ -148,7 +148,7 @@
 			</div>
 		</section>
 
-<!--========== PORTAFOLIO ==========-->
+
 
 	<div class="container portafolio-wrapper" id="portafolio-wrapper">
 		<div class="portafolio-titular">
@@ -265,7 +265,7 @@
 					<div class="grafico">
 						<a href="images/cyzone2.png" data-fancybox="images" data-caption="Diseño Editorial y Diagramación"><img src="images/cyzone2.png" class="grafico-muestra" alt="cyzone2"></a>
 					</div>
-					<div class="grafico"  data-span="2">
+					<div class="grafico" data-span="2">
 						<a href="images/banner_djl.jpg" data-fancybox="images" data-caption="Diseño de Banner publicitario"><img src="images/banner_djl.jpg" class="grafico-muestra" alt="banner_djl"></a>
 					</div>
 					<div class="grafico">
@@ -287,7 +287,7 @@
 
 
 
-<!--========== CONTACTO ==========-->
+
 		<div class="container-fluid contacto-wrapper" id="contacto-wrapper">
 			<div class="container contacto-wrapp">
 				<div class="contacto-titular">
@@ -340,7 +340,7 @@
 		</div>
 		
 		<div class="boton-up" data-toggle="tooltip" data-placement="top" title="Subir">
-			<!-- <span class="tooltip" title="subir">tooltip</span> -->
+			
 				<span class="glyphicon glyphicon-menu-up"></span>
 		</div>
 		
@@ -351,17 +351,17 @@
 	</footer>
 
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-<script src="js/fakeLoader.min.js"></script>	<!-- preloader -->
+<script src="js/fakeLoader.min.js"></script>	
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>  <!-- bootstrap se carga DESPUES DE JQUERY.UI PARA PODER TENER PIRORIDAD (solucioa conflicto con tooltip) -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>  
 
 
 <script type="text/javascript" src="js/progressbar.min.js"></script>
 
 <script type="text/javascript" src="js/script.min.js"></script>
-<script src="js/zepto.min.js"></script>	<!-- posicion de imagenes -->
-<script src="js/jquery.waterfall.min.js"></script>	<!-- posicion de imagenes -->
-<Script src = "js/jquery.fancybox.min.js"> </script> <!--carrousel de imagenes -->
+<script src="js/zepto.min.js"></script>	
+<script src="js/jquery.waterfall.min.js"></script>	
+<script src="js/jquery.fancybox.min.js"> </script> 
 
 </body>
 </html>
