se agego zepto.js

--- a/index.html
+++ b/index.html
@@ -353,9 +353,10 @@
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
 <script src="js/fakeLoader.min.js"></script>
 
+<script type="text/javascript" src="js/zepto.min.js"></script>
+<script src="js/jquery.waterfall.min.js"></script>
 
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-<script src="js/jquery.waterfall.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>  
 
 <script type="text/javascript" src="js/progressbar.min.js"></script>
