se quito data-span de imagen banner

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 					<div class="grafico">
 						<a href="images/cyzone2.png" data-fancybox="images" data-caption="Diseño Editorial y Diagramación"><img src="images/cyzone2.png" class="grafico-muestra" alt="cyzone2"></a>
 					</div>
-					<div class="grafico" data-span="2">
+					<div class="grafico">
 						<a href="images/banner_djl.jpg" data-fancybox="images" data-caption="Diseño de Banner publicitario"><img src="images/banner_djl.jpg" class="grafico-muestra" alt="banner_djl"></a>
 					</div>
 					<div class="grafico">
