se corrigio texto en objetivos

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div class="formacion-objetivo-desc">
 						<ul>
 							<li>Generar proyectos de gran impacto para la sociedad.</li>
-							<li>Compartir conocimients y Aprender continuamente a utilizar nuevas tecnologías.</li>
+							<li>Compartir conocimientos y Aprender continuamente a utilizar nuevas tecnologías.</li>
 							<li>Pertenecer a una Empersa donde pueda aportar mis conocimientos.</li>
 							<li>Trabajar en base al respeto y ética para un mejor desarrollo.</li>
 						</ul>
