se actualizo contenido

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 			    <div class="col-md-4 webs">
 			    	<div class="webs-content">
 				    	<div class="webs-img">
-				    		<img src="images/muestra_telebanking.jpg" alt="muestra_telebanking">
-				    		<a href="https://rogerul.github.io/banco/" target="_blank"><div class="capa-transp"></div></a>
+				    		<img src="images/muestra_plenitud.jpg" alt="muestra">
+				    		<a href="https://www.viveplenitud.com/" target="_blank"><div class="capa-transp"></div></a>
 				    	</div>
 				    	<div class="webs-descripcion">
 				    		<p class="webs-subtitulo">Maquetación Web y Mantenimiento</p>
